fixed alignment

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -25,3 +25,11 @@
 .footer-links a:hover {
   color: $primary;
 }
+
+.footer-forrow > p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  left: 9px;
+  position: relative;
+  top: 5px;
+}
